--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@sveltejs/adapter-static": "1.0.0-next.39"
+    "@sveltejs/adapter-static": "1.0.0-next.39",
+    "gh-pages": "^4.0.0"
   }
 }
