--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,115 +1,107 @@
 {
-  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-280f26f8.js",
-    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/client/start.js",
+  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
+    "file": "_app/immutable/start-8899ad04.js",
+    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-e8ff32ef.js",
-      "_index-3c674002.js",
-      "_singletons-4c7c8dc0.js"
+      "_index-2129d253.js",
+      "_singletons-f9ecc1ce.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js"
+      ".svelte-kit/generated/nodes/2.js",
+      ".svelte-kit/generated/nodes/3.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-70ae9b14.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-8eb17b55.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-e8ff32ef.js",
-      "_index-3c674002.js",
-      "_navigation-85849231.js",
-      "_stores-6bae65b6.js",
-      "_singletons-4c7c8dc0.js"
+      "_index-2129d253.js",
+      "_singletons-f9ecc1ce.js",
+      "_index-5f6996ca.js"
     ],
     "css": [
-      "_app/immutable/assets/+layout-b133f048.css"
+      "_app/immutable/assets/_layout-da9a1788.css"
     ]
   },
-  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-b93b727e.js",
-    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-2631bc2f.js",
+    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-e8ff32ef.js",
-      "_stores-6bae65b6.js"
+      "_index-2129d253.js",
+      "_singletons-f9ecc1ce.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-15815dde.js",
+    "file": "_app/immutable/components/pages/_page.svelte-6786e450.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-e8ff32ef.js",
-      "_navigation-85849231.js",
-      "_stores-6bae65b6.js",
-      "_singletons-4c7c8dc0.js"
+      "_index-2129d253.js",
+      "_index-5f6996ca.js"
     ]
   },
-  "_singletons-4c7c8dc0.js": {
-    "file": "_app/immutable/chunks/singletons-4c7c8dc0.js"
-  },
-  "_index-e8ff32ef.js": {
-    "file": "_app/immutable/chunks/index-e8ff32ef.js"
-  },
-  "_index-3c674002.js": {
-    "file": "_app/immutable/chunks/index-3c674002.js",
+  "src/routes/coming-soon/+page.svelte": {
+    "file": "_app/immutable/components/pages/coming-soon/_page.svelte-dd69ee36.js",
+    "src": "src/routes/coming-soon/+page.svelte",
+    "isEntry": true,
     "imports": [
-      "_index-e8ff32ef.js"
+      "_index-2129d253.js"
     ]
   },
-  "_navigation-85849231.js": {
-    "file": "_app/immutable/chunks/navigation-85849231.js",
+  "_singletons-f9ecc1ce.js": {
+    "file": "_app/immutable/chunks/singletons-f9ecc1ce.js",
     "imports": [
-      "_singletons-4c7c8dc0.js"
+      "_index-2129d253.js"
     ]
   },
-  "_stores-6bae65b6.js": {
-    "file": "_app/immutable/chunks/stores-6bae65b6.js",
+  "_index-2129d253.js": {
+    "file": "_app/immutable/chunks/index-2129d253.js"
+  },
+  "_index-5f6996ca.js": {
+    "file": "_app/immutable/chunks/index-5f6996ca.js",
     "imports": [
-      "_index-e8ff32ef.js"
+      "_index-2129d253.js"
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-834546b8.js",
+    "file": "_app/immutable/chunks/0-252455e3.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+layout.svelte",
-      "_index-e8ff32ef.js",
-      "_index-3c674002.js",
-      "_navigation-85849231.js",
-      "_singletons-4c7c8dc0.js",
-      "_stores-6bae65b6.js"
+      "src/routes/+layout.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-d0c3556a.js",
+    "file": "_app/immutable/chunks/1-83128739.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
-      "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-      "_index-e8ff32ef.js",
-      "_stores-6bae65b6.js"
+      "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-43523d89.js",
+    "file": "_app/immutable/chunks/2-6aac12f8.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+page.svelte",
-      "_index-e8ff32ef.js",
-      "_navigation-85849231.js",
-      "_singletons-4c7c8dc0.js",
-      "_stores-6bae65b6.js"
+      "src/routes/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-bdb2bc81.js",
+    "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/coming-soon/+page.svelte"
     ]
   },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/+layout-b133f048.css",
+    "file": "_app/immutable/assets/_layout-da9a1788.css",
     "src": "src/routes/+layout.css"
   }
 }
