--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-7c4d64ac.js",
+    "file": "_app/immutable/start-639f46ea.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-2129d253.js",
-      "_singletons-3509f0a6.js"
+      "_singletons-99bb6460.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -15,25 +15,25 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-c65fe1af.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-c398ac63.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-2129d253.js",
-      "_singletons-3509f0a6.js",
+      "_singletons-99bb6460.js",
       "_index-5f6996ca.js"
     ],
     "css": [
       "_app/immutable/assets/_layout-da9a1788.css"
     ]
   },
-  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-cdcbf2ba.js",
-    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+  "src/routes/+error.svelte": {
+    "file": "_app/immutable/components/pages/_error.svelte-875557a0.js",
+    "src": "src/routes/+error.svelte",
     "isEntry": true,
     "imports": [
       "_index-2129d253.js",
-      "_singletons-3509f0a6.js"
+      "_singletons-99bb6460.js"
     ]
   },
   "src/routes/+page.svelte": {
@@ -53,8 +53,8 @@
       "_index-2129d253.js"
     ]
   },
-  "_singletons-3509f0a6.js": {
-    "file": "_app/immutable/chunks/singletons-3509f0a6.js",
+  "_singletons-99bb6460.js": {
+    "file": "_app/immutable/chunks/singletons-99bb6460.js",
     "imports": [
       "_index-2129d253.js"
     ]
@@ -69,7 +69,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-1ca16a9c.js",
+    "file": "_app/immutable/chunks/0-07f185a3.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -77,11 +77,11 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-4df70307.js",
+    "file": "_app/immutable/chunks/1-2b06df85.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
-      "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+      "src/routes/+error.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
