--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,107 +1,104 @@
 {
-  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-f4c6499c.js",
-    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js",
+  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
+    "file": "_app/immutable/start-3b826dff.js",
+    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_singletons-519bb4cf.js"
+      "_index-3ab26604.js",
+      "_index-091284f0.js",
+      "_singletons-4c7c8dc0.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js",
-      ".svelte-kit/generated/nodes/3.js"
+      ".svelte-kit/generated/nodes/2.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-ee38dadd.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-ce765608.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_singletons-519bb4cf.js",
-      "_index-5f6996ca.js"
+      "_index-3ab26604.js",
+      "_index-091284f0.js",
+      "_stores-e40546ad.js",
+      "_singletons-4c7c8dc0.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-da9a1788.css"
+      "_app/immutable/assets/+layout-5407731a.css"
     ]
   },
   "src/routes/+error.svelte": {
-    "file": "_app/immutable/components/pages/_error.svelte-e18088b2.js",
+    "file": "_app/immutable/components/pages/_error.svelte-f3ec1682.js",
     "src": "src/routes/+error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_singletons-519bb4cf.js"
+      "_index-3ab26604.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-6786e450.js",
+    "file": "_app/immutable/components/pages/_page.svelte-c1a76004.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_index-5f6996ca.js"
+      "_index-3ab26604.js",
+      "_stores-e40546ad.js",
+      "_singletons-4c7c8dc0.js"
     ]
   },
-  "src/routes/coming-soon/+page.svelte": {
-    "file": "_app/immutable/components/pages/coming-soon/_page.svelte-dd69ee36.js",
-    "src": "src/routes/coming-soon/+page.svelte",
-    "isEntry": true,
+  "_singletons-4c7c8dc0.js": {
+    "file": "_app/immutable/chunks/singletons-4c7c8dc0.js"
+  },
+  "_index-3ab26604.js": {
+    "file": "_app/immutable/chunks/index-3ab26604.js"
+  },
+  "_index-091284f0.js": {
+    "file": "_app/immutable/chunks/index-091284f0.js",
     "imports": [
-      "_index-2129d253.js"
+      "_index-3ab26604.js"
     ]
   },
-  "_singletons-519bb4cf.js": {
-    "file": "_app/immutable/chunks/singletons-519bb4cf.js",
+  "_stores-e40546ad.js": {
+    "file": "_app/immutable/chunks/stores-e40546ad.js",
     "imports": [
-      "_index-2129d253.js"
-    ]
-  },
-  "_index-2129d253.js": {
-    "file": "_app/immutable/chunks/index-2129d253.js"
-  },
-  "_index-5f6996ca.js": {
-    "file": "_app/immutable/chunks/index-5f6996ca.js",
-    "imports": [
-      "_index-2129d253.js"
+      "_singletons-4c7c8dc0.js",
+      "_index-3ab26604.js"
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-4015dd3a.js",
+    "file": "_app/immutable/chunks/0-13a6758c.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+layout.svelte"
+      "src/routes/+layout.svelte",
+      "_index-3ab26604.js",
+      "_index-091284f0.js",
+      "_stores-e40546ad.js",
+      "_singletons-4c7c8dc0.js"
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-aa7e266a.js",
+    "file": "_app/immutable/chunks/1-97cd2dd5.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+error.svelte"
+      "src/routes/+error.svelte",
+      "_index-3ab26604.js"
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-6aac12f8.js",
+    "file": "_app/immutable/chunks/2-e29df396.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-bdb2bc81.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/coming-soon/+page.svelte"
+      "src/routes/+page.svelte",
+      "_index-3ab26604.js",
+      "_stores-e40546ad.js",
+      "_singletons-4c7c8dc0.js"
     ]
   },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-da9a1788.css",
+    "file": "_app/immutable/assets/+layout-5407731a.css",
     "src": "src/routes/+layout.css"
   }
 }
