--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,104 +1,119 @@
 {
-  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-3b826dff.js",
-    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.409_svelte@3.49.0+vite@3.0.8/node_modules/@sveltejs/kit/src/runtime/client/start.js",
+  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
+    "file": "_app/immutable/start-f95ee3bb.js",
+    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.544_svelte@3.53.1+vite@3.2.3/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-3ab26604.js",
-      "_index-091284f0.js",
-      "_singletons-4c7c8dc0.js"
+      "_index-2129d253.js",
+      "_singletons-81ed88fb.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js"
+      ".svelte-kit/generated/nodes/2.js",
+      ".svelte-kit/generated/nodes/3.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-ce765608.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-59da3e22.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-3ab26604.js",
-      "_index-091284f0.js",
-      "_stores-e40546ad.js",
-      "_singletons-4c7c8dc0.js"
+      "_index-2129d253.js",
+      "_singletons-81ed88fb.js",
+      "_index-5f6996ca.js"
     ],
     "css": [
-      "_app/immutable/assets/+layout-5407731a.css"
+      "_app/immutable/assets/_layout-da9a1788.css"
     ]
   },
   "src/routes/+error.svelte": {
-    "file": "_app/immutable/components/pages/_error.svelte-f3ec1682.js",
+    "file": "_app/immutable/components/pages/_error.svelte-e2d581aa.js",
     "src": "src/routes/+error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-3ab26604.js"
+      "_index-2129d253.js",
+      "_singletons-81ed88fb.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-c1a76004.js",
+    "file": "_app/immutable/components/pages/_page.svelte-6786e450.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-3ab26604.js",
-      "_stores-e40546ad.js",
-      "_singletons-4c7c8dc0.js"
+      "_index-2129d253.js",
+      "_index-5f6996ca.js"
     ]
   },
-  "_singletons-4c7c8dc0.js": {
-    "file": "_app/immutable/chunks/singletons-4c7c8dc0.js"
-  },
-  "_index-3ab26604.js": {
-    "file": "_app/immutable/chunks/index-3ab26604.js"
-  },
-  "_index-091284f0.js": {
-    "file": "_app/immutable/chunks/index-091284f0.js",
+  "src/routes/coming-soon/+page.svelte": {
+    "file": "_app/immutable/components/pages/coming-soon/_page.svelte-dd69ee36.js",
+    "src": "src/routes/coming-soon/+page.svelte",
+    "isEntry": true,
     "imports": [
-      "_index-3ab26604.js"
+      "_index-2129d253.js"
     ]
   },
-  "_stores-e40546ad.js": {
-    "file": "_app/immutable/chunks/stores-e40546ad.js",
+  "src/routes/+layout.ts": {
+    "file": "_app/immutable/modules/pages/_layout.ts-85600901.js",
+    "src": "src/routes/+layout.ts",
+    "isEntry": true,
     "imports": [
-      "_singletons-4c7c8dc0.js",
-      "_index-3ab26604.js"
+      "__layout-abf91a35.js"
     ]
+  },
+  "_singletons-81ed88fb.js": {
+    "file": "_app/immutable/chunks/singletons-81ed88fb.js",
+    "imports": [
+      "_index-2129d253.js"
+    ]
+  },
+  "_index-2129d253.js": {
+    "file": "_app/immutable/chunks/index-2129d253.js"
+  },
+  "_index-5f6996ca.js": {
+    "file": "_app/immutable/chunks/index-5f6996ca.js",
+    "imports": [
+      "_index-2129d253.js"
+    ]
+  },
+  "__layout-abf91a35.js": {
+    "file": "_app/immutable/chunks/_layout-abf91a35.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-13a6758c.js",
+    "file": "_app/immutable/chunks/0-43e5dd5f.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+layout.svelte",
-      "_index-3ab26604.js",
-      "_index-091284f0.js",
-      "_stores-e40546ad.js",
-      "_singletons-4c7c8dc0.js"
+      "__layout-abf91a35.js",
+      "src/routes/+layout.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-97cd2dd5.js",
+    "file": "_app/immutable/chunks/1-78a2ff59.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+error.svelte",
-      "_index-3ab26604.js"
+      "src/routes/+error.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-e29df396.js",
+    "file": "_app/immutable/chunks/2-6aac12f8.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
-      "src/routes/+page.svelte",
-      "_index-3ab26604.js",
-      "_stores-e40546ad.js",
-      "_singletons-4c7c8dc0.js"
+      "src/routes/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-bdb2bc81.js",
+    "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/coming-soon/+page.svelte"
     ]
   },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/+layout-5407731a.css",
+    "file": "_app/immutable/assets/_layout-da9a1788.css",
     "src": "src/routes/+layout.css"
   }
 }
