--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"eslint": "^8.27.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"gh-pages": "^4.0.0",
 		"postcss": "^8.4.19",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.7.1",
@@ -35,8 +36,5 @@
 		"typescript": "^4.8.4",
 		"vite": "^3.2.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"gh-pages": "^4.0.0"
-	}
+	"type": "module"
 }
