--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.27.1",
+		"@playwright/test": "^1.28.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "1.0.0-next.48",
 		"@sveltejs/kit": "next",
+		"@types/dompurify": "^2.4.0",
+		"@types/marked": "^4.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
 		"autoprefixer": "^10.4.13",
@@ -24,10 +26,11 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"gh-pages": "^4.0.0",
+		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.19",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.53.1",
 		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.7",
@@ -36,5 +39,11 @@
 		"typescript": "^4.9.3",
 		"vite": "^3.2.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@types/turndown": "^5.0.1",
+		"isomorphic-dompurify": "^0.24.0",
+		"marked": "^4.2.2",
+		"turndown": "^7.1.1"
+	}
 }
