--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,12 @@
 {
-  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.547_svelte@3.53.1+vite@3.2.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-e937ab71.js",
-    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.547_svelte@3.53.1+vite@3.2.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
+  "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.551_svelte@3.53.1+vite@3.2.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
+    "file": "_app/immutable/start-2ee3a0d9.js",
+    "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.551_svelte@3.53.1+vite@3.2.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_singletons-ee32c75e.js"
+      "_index-271e2ad1.js",
+      "_singletons-e8017ab4.js",
+      "_preload-helper-b21cceae.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -15,42 +16,46 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-0794c85c.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-1184141f.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_singletons-ee32c75e.js",
-      "_index-5f6996ca.js"
+      "_preload-helper-b21cceae.js",
+      "_index-271e2ad1.js",
+      "_singletons-e8017ab4.js",
+      "_index-a3327757.js"
+    ],
+    "dynamicImports": [
+      "src/components/Footer.svelte"
     ],
     "css": [
-      "_app/immutable/assets/_layout-f298eced.css"
+      "_app/immutable/assets/_layout-f309fd64.css"
     ]
   },
   "src/routes/+error.svelte": {
-    "file": "_app/immutable/components/pages/_error.svelte-9ab84619.js",
+    "file": "_app/immutable/components/pages/_error.svelte-cdaac382.js",
     "src": "src/routes/+error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_singletons-ee32c75e.js"
+      "_index-271e2ad1.js",
+      "_singletons-e8017ab4.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-9ac1c161.js",
+    "file": "_app/immutable/components/pages/_page.svelte-b48fe9b4.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js",
-      "_index-5f6996ca.js"
+      "_index-271e2ad1.js",
+      "_index-a3327757.js"
     ]
   },
   "src/routes/coming-soon/+page.svelte": {
-    "file": "_app/immutable/components/pages/coming-soon/_page.svelte-0a676d0d.js",
+    "file": "_app/immutable/components/pages/coming-soon/_page.svelte-bb911588.js",
     "src": "src/routes/coming-soon/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-2129d253.js"
+      "_index-271e2ad1.js"
     ]
   },
   "src/routes/+layout.ts": {
@@ -61,26 +66,29 @@
       "__layout-1daba58d.js"
     ]
   },
-  "_singletons-ee32c75e.js": {
-    "file": "_app/immutable/chunks/singletons-ee32c75e.js",
+  "_singletons-e8017ab4.js": {
+    "file": "_app/immutable/chunks/singletons-e8017ab4.js",
     "imports": [
-      "_index-2129d253.js"
+      "_index-271e2ad1.js"
     ]
   },
-  "_index-2129d253.js": {
-    "file": "_app/immutable/chunks/index-2129d253.js"
+  "_index-271e2ad1.js": {
+    "file": "_app/immutable/chunks/index-271e2ad1.js"
   },
-  "_index-5f6996ca.js": {
-    "file": "_app/immutable/chunks/index-5f6996ca.js",
+  "_preload-helper-b21cceae.js": {
+    "file": "_app/immutable/chunks/preload-helper-b21cceae.js"
+  },
+  "_index-a3327757.js": {
+    "file": "_app/immutable/chunks/index-a3327757.js",
     "imports": [
-      "_index-2129d253.js"
+      "_index-271e2ad1.js"
     ]
   },
   "__layout-1daba58d.js": {
     "file": "_app/immutable/chunks/_layout-1daba58d.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-b902722d.js",
+    "file": "_app/immutable/chunks/0-be5a32bb.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -89,7 +97,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-85a44307.js",
+    "file": "_app/immutable/chunks/1-434e6606.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -97,7 +105,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-ac9f4662.js",
+    "file": "_app/immutable/chunks/2-7a1ca004.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -105,15 +113,23 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-b6af045f.js",
+    "file": "_app/immutable/chunks/3-48650bcd.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/coming-soon/+page.svelte"
     ]
   },
+  "src/components/Footer.svelte": {
+    "file": "_app/immutable/chunks/Footer-26856854.js",
+    "src": "src/components/Footer.svelte",
+    "isDynamicEntry": true,
+    "imports": [
+      "_index-271e2ad1.js"
+    ]
+  },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-f298eced.css",
+    "file": "_app/immutable/assets/_layout-f309fd64.css",
     "src": "src/routes/+layout.css"
   }
 }
