--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "1.0.0-next.48",
 		"@sveltejs/kit": "next",
-		"@types/dompurify": "^2.4.0",
-		"@types/marked": "^4.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
 		"autoprefixer": "^10.4.13",
@@ -26,7 +24,6 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"gh-pages": "^4.0.0",
-		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.19",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.7.1",
@@ -39,11 +36,5 @@
 		"typescript": "^4.9.3",
 		"vite": "^3.2.4"
 	},
-	"type": "module",
-	"dependencies": {
-		"@types/turndown": "^5.0.1",
-		"isomorphic-dompurify": "^0.24.0",
-		"marked": "^4.2.2",
-		"turndown": "^7.1.1"
-	}
+	"type": "module"
 }
