--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.567_svelte@3.53.1+vite@3.2.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-7f31afe8.js",
+    "file": "_app/immutable/start-cf36f495.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.567_svelte@3.53.1+vite@3.2.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-94009d22.js",
-      "_singletons-4847fb45.js",
+      "_index-271e2ad1.js",
+      "_singletons-9b5edc28.js",
       "_preload-helper-9b728935.js"
     ],
     "dynamicImports": [
@@ -16,13 +16,14 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-82aa1edb.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-cc3b3efe.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_preload-helper-9b728935.js",
-      "_index-94009d22.js",
-      "_singletons-4847fb45.js"
+      "_index-271e2ad1.js",
+      "_singletons-9b5edc28.js",
+      "_index-a3327757.js"
     ],
     "dynamicImports": [
       "src/components/Footer.svelte"
@@ -32,28 +33,29 @@
     ]
   },
   "src/routes/+error.svelte": {
-    "file": "_app/immutable/components/pages/_error.svelte-b43d8a39.js",
+    "file": "_app/immutable/components/pages/_error.svelte-e5aa107d.js",
     "src": "src/routes/+error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-94009d22.js",
-      "_singletons-4847fb45.js"
+      "_index-271e2ad1.js",
+      "_singletons-9b5edc28.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-053bcad9.js",
+    "file": "_app/immutable/components/pages/_page.svelte-18f1a938.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-94009d22.js"
+      "_index-271e2ad1.js",
+      "_index-a3327757.js"
     ]
   },
   "src/routes/coming-soon/+page.svelte": {
-    "file": "_app/immutable/components/pages/coming-soon/_page.svelte-165a1b90.js",
+    "file": "_app/immutable/components/pages/coming-soon/_page.svelte-bb911588.js",
     "src": "src/routes/coming-soon/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-94009d22.js"
+      "_index-271e2ad1.js"
     ]
   },
   "src/routes/+layout.ts": {
@@ -64,23 +66,29 @@
       "__layout-1daba58d.js"
     ]
   },
-  "_singletons-4847fb45.js": {
-    "file": "_app/immutable/chunks/singletons-4847fb45.js",
+  "_singletons-9b5edc28.js": {
+    "file": "_app/immutable/chunks/singletons-9b5edc28.js",
     "imports": [
-      "_index-94009d22.js"
+      "_index-271e2ad1.js"
     ]
   },
-  "_index-94009d22.js": {
-    "file": "_app/immutable/chunks/index-94009d22.js"
+  "_index-271e2ad1.js": {
+    "file": "_app/immutable/chunks/index-271e2ad1.js"
   },
   "_preload-helper-9b728935.js": {
     "file": "_app/immutable/chunks/preload-helper-9b728935.js"
+  },
+  "_index-a3327757.js": {
+    "file": "_app/immutable/chunks/index-a3327757.js",
+    "imports": [
+      "_index-271e2ad1.js"
+    ]
   },
   "__layout-1daba58d.js": {
     "file": "_app/immutable/chunks/_layout-1daba58d.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-6d748b4d.js",
+    "file": "_app/immutable/chunks/0-86237a68.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -89,7 +97,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-bac429cd.js",
+    "file": "_app/immutable/chunks/1-b64085cd.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -97,7 +105,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-244bd402.js",
+    "file": "_app/immutable/chunks/2-f7ce58c9.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -105,7 +113,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-4beebd85.js",
+    "file": "_app/immutable/chunks/3-48650bcd.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
@@ -113,11 +121,11 @@
     ]
   },
   "src/components/Footer.svelte": {
-    "file": "_app/immutable/chunks/Footer-7f8a7d4b.js",
+    "file": "_app/immutable/chunks/Footer-26856854.js",
     "src": "src/components/Footer.svelte",
     "isDynamicEntry": true,
     "imports": [
-      "_index-94009d22.js"
+      "_index-271e2ad1.js"
     ]
   },
   "src/routes/+layout.css": {
