--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
-	"svelteBracketNewLine": false
+	"svelteBracketNewLine": false,
+	"bracketSameLine": true
 }
