--- a/.gitignore
+++ b/.gitignore
@@ -155,12 +155,13 @@ dist
 # Optional stylelint cache
 
 # SvelteKit build / generate output
-.svelte-kit
+#.svelte-kit
 
 ### Svelte ###
 # gitignore template for the SvelteKit, frontend web component framework
 # website: https://kit.svelte.dev/
 
+#.svelte-kit/
 package
 
 ### Vercel ###
