--- a/package.json
+++ b/package.json
@@ -13,29 +13,31 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "next",
+		"@playwright/test": "^1.29.0",
+		"@sveltejs/adapter-auto": "1.0.0",
 		"@sveltejs/adapter-static": "1.0.0-next.48",
 		"@sveltejs/adapter-vercel": "1.0.0-next.84",
-		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@sveltejs/kit": "1.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.46.1",
+		"@typescript-eslint/parser": "^5.46.1",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.29.0",
+		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"gh-pages": "^4.0.0",
-		"postcss": "^8.4.19",
+		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.53.1",
-		"svelte-check": "^2.10.0",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"saos": "^1.3.1",
+		"svelte": "^3.55.0",
+		"svelte-check": "^2.10.2",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-reduced-motion": "^1.0.5",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^3.2.4"
+		"typescript": "^4.9.4",
+		"vite": "^4.0.1"
 	},
 	"type": "module"
 }
